tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/literal-multiline-quotes-1.stderr
TOML parse error at line 1, column 28
  |
1 | a = '''6 apostrophes: ''''''
  |                            ^
expected newline, `#`
